--- a/package.json
+++ b/package.json
@@ -17,13 +17,23 @@
     "@tailwindcss/vite": "^4.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dequal": "^2.0.3",
+    "emailjs-com": "^3.2.0",
     "lucide-react": "^0.475.0",
+    "make-cancellable-promise": "^2.0.0",
+    "make-event-props": "^2.0.0",
+    "merge-refs": "^2.0.0",
     "motion": "^12.4.2",
+    "pdfjs-dist": "^4.8.69",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-pdf": "^9.2.1",
     "react-scroll": "^1.9.3",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tiny-invariant": "^1.3.3",
+    "warning": "^4.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
