selector de idioma, ingles o español

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "dequal": "^2.0.3",
     "emailjs-com": "^3.2.0",
+    "i18next": "^25.1.2",
     "lucide-react": "^0.475.0",
     "make-cancellable-promise": "^2.0.0",
     "make-event-props": "^2.0.0",
@@ -27,6 +28,7 @@
     "pdfjs-dist": "^4.8.69",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-pdf": "^9.2.1",
     "react-scroll": "^1.9.3",
